<resources>
    <string name="app_name">콩류</string>

    <string name="title_kidneybeans">강낭콩</string>
    <string name="title_redbeans">팥</string>
    <string name="title_mungbeans">녹두</string>
    <string name="title_peas">완두</string>

    <string name="category">카테고리\n콩류</string>

    <string name="term_kidneybeans">재배기간\n약 50일</string>
    <string name="term_redbeans">재배기간\n약 90일</string>
    <string name="term_mungbeans">재배기간\n약 120일</string>
    <string name="term_peas">재배기간\n약 80일</string>

    <string name="title_environment">잘 자라는 환경조건</string>

    <string name="description_environment_kidneybeans">⦁ 싹트는 온도 : 20∼30℃\n⦁ 잘 자라는 온도 : 10∼25℃\n⦁ 토양조건 : 수분을 잘 보유하고 물빠짐도 잘되는 식양토가 좋음\n⦁ 토양산도 : pH5.5∼6.8\n⦁ 토양수분 : 습해에 비교적 약하여 습해를 받으면 아래쪽 잎이 누렇게 변하여 낙엽의 시기가 빨리 오고 인산흡수가 저해되므로 배수에 관심을 가져야 함
</string>
    <string name="description_environment_redbeans">⦁ 싹트는 온도 : 10℃ 이상\n⦁ 잘 자라는 온도 : 25∼30℃\n⦁ 토양조건 : 물빠짐이 좋고 보수력이 풍부한 식양토가 좋음\n⦁ 토양산도 : pH5.5∼6.5\n⦁ 토양수분 : 과도한 습도나 물이 풍부한 토양에서는 뿌리 부분이 부패할 수 있으므로 토양이 너무 축축한 상태를 피하는 것이 좋음</string>
    <string name="description_environment_mungbeans">⦁ 싹트는 온도 : 15∼25℃\n⦁ 잘 자라는 온도 : 28∼30℃\n⦁ 토양조건 : 어느 토양에서나 잘 자라지만 사질토양에서 가장 잘 자람\n⦁ 토양산도 : pH6.3∼7.3\n⦁ 토양수분 : 토양수분이 부족하면 녹두가 너무 빨리 성숙하지만, 등숙기에 건조한 날씨는 종자생산에 유리함</string>
    <string name="description_environment_peas">⦁ 싹트는 온도 : 25∼30℃\n⦁ 잘 자라는 온도 : 12∼16℃\n⦁ 토양조건 : 배수가 좋은 질참흙 또는 참흙이 적당함\n⦁ 토양산도 : pH5.5.6∼6.5\n⦁ 토양수분 : 수분에 약해 배수가 불량한 곳에서는 뿌리가 자라지 못하고 식물체가 일찍부터 마르고 병의 발생도 많음</string>

    <string name="title_cultivate">키우는 방법</string>

    <string name="description_cultivate_kidneybeans">⦁ 강낭콩 씨앗을 흙에 심고 씨앗에 충분한 양의 물을 줌\n⦁ 햇빛이 잘 드는 곳에 위치시켜줌\n⦁ 흙을 촉촉하게 유지하며 지나치게 물을 주지 않도록 조심\n⦁ 강낭콩이 자라기 시작하면 지지대를 제공하여 씨앗이 흘러내리지 않도록 함\n⦁ 강낭콩에게 충분한 공기 순환이 가능하도록 주위를 깨끗하게 유지\n⦁ 수확할 때 강낭콩 꼭지가 건조하고 단단해질 때까지 기다림\n⦁ 강낭콩을 수확하고 저장할 때 건조하고 시들한 장소에 보관</string>
    <string name="description_cultivate_redbeans">⦁ 팥 씨앗을 흙에 심기 전에 24시간 동안 미리 물에 젖혀줌\n⦁ 심을 위치에 깊이 약 3~5cm의 구멍을 파고, 팥 씨앗을 넣어 흙으로 덮어줌\n⦁ 충분한 양의 물을 주고, 흙을 촉촉하게 유지함\n⦁ 햇빛이 잘 드는 장소에 팥을 위치시켜줌\n⦁ 식물이 자라면 지지물을 제공하여 성장을 도움\n⦁ 열매가 잘 자라고 색깔이 변할 때 수확\n⦁ 수확한 팥을 충분한 통풍과 건조가 유지되는 장소에 보관</string>
    <string name="description_cultivate_mungbeans">⦁ 두덕과 골을 30cm, 20cm로 하는 이랑을 만듦\n⦁ 3~4cm의 깊이로 구멍을 팜\n⦁ 15cm 간격(3~4개 정도)으로 점파하여 심음\n⦁ 싹이 4cm 정도로 자라면, 2개 정도 모종을 남기고 솎아주기를 함\n ⦁ 녹두는 작물 사이의 거리를 가깝게 해도 되므로, 작물 사이의 간격을 주지 않고 재배하는 것이 수확량이 많아짐</string>
    <string name="description_cultivate_peas">⦁ 완두콩은 파종 깊이 5cm, 파종 간격 20~30cm로 심음\n⦁ 한 구멍당 완두콩 2~3알 파종후 모종이 10cm 정도 자라면 세력이 좋은 것 2개를 남기고 솎아줌\n⦁ 완두콩 줄기가 쓰러지는 것을 방지하기 위해 지주대를 세움\n⦁ 완두에 발생하는 병해충을 방제\n⦁ 꼬투리가 약간 하얗게 되면서 표면이 우둘투둘해지면 수확</string>
</resources>