<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="#eeee"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mungbeans" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="150dp"
        android:text="@string/title_mungbeans"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivImage" />

    <TextView
        android:id="@+id/tvCtgr"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="220dp"
        android:background="@drawable/round_square_box"
        android:padding="20dp"
        android:text="@string/category"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ivImage"
        app:layout_constraintTop_toTopOf="@+id/ivImage" />

    <TextView
        android:id="@+id/tvTerm"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="560px"
        android:layout_marginTop="220dp"
        android:background="@drawable/round_square_box"
        android:padding="20dp"
        android:text="@string/term_mungbeans"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ivImage"
        app:layout_constraintTop_toTopOf="@+id/ivImage" />

    <TextView
        android:id="@+id/tvEnv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_marginTop="300dp"
        android:padding="20dp"
        android:text="@string/title_environment"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivImage" />

    <TextView
        android:id="@+id/tvEnv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="350dp"
        android:layout_marginRight="30px"
        android:background="@drawable/round_square_box"
        android:padding="20dp"
        android:text="@string/description_environment_mungbeans"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivImage" />

</androidx.constraintlayout.widget.ConstraintLayout>